# bb-translator

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Makefile  README.md  vcpkg-configuration.json  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml
.vcpkg/ports/glfw3/: portfile.cmake  vcpkg.json
.vcpkg/ports/physfs/: portfile.cmake  vcpkg-cmake-wrapper.cmake  vcpkg.json
.vcpkg/triplets/: x86-windows.cmake
src/: CMakeLists.txt  bb-translator.main.cpp  debug.hpp  utf8.cpp  utf8.h
src/assets/backgrounds/: loading_screen_11.bin2cpp  loading_screen_11.h
src/assets/fonts/: font.h  fontawesome-webfont.bin2cpp  fontawesome-webfont.h
src/bb-translator/: CMakeLists.txt  binding.cpp  binding.h
src/git/: CMakeLists.txt  clone.cpp  clone.h  common.h  head.cpp  head.h  init.cpp  init.h  pull.cpp  pull.h
src/ui/: AboutWindow.cpp  AboutWindow.h  AppState.h  ConsoleWindow.cpp  ConsoleWindow.h  OperationsWindow.cpp  OperationsWindow.h  SettingsWindow.cpp  SettingsWindow.h  UsageWindow.cpp  UsageWindow.h
src/ui/imgui_utilities/: CMakeLists.txt  FontLoader.cpp  FontLoader.h  HyperlinkHelper.cpp  HyperlinkHelper.h  ImGuiExt.cpp  ImGuiExt.h  MarkdownHelper.cpp  MarkdownHelper.h  imFileDialog.cpp  imFileDialog.h  stb_image.h
src/ui/source_parse/: CMakeLists.txt  GuiHeaderTree.cpp  GuiHeaderTree.h  HeaderTree.cpp  HeaderTree.h  ImGuiCodeParser.cpp  ImGuiCodeParser.h  ImGuiDemoParser.cpp  ImGuiDemoParser.h  ImGuiRepoUrl.h  Sources.cpp  Sources.h  Tree.h
